// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownMenu & DropdownItem click option 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            B
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem close-on-click-outside 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c5.mul-icon::before {
  display: inline-block;
}

.c5.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c5.mul-icon-success::before {
  content: '\\F0C8';
}

.c4.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  overflow: hidden;
  color: #323233;
  font-size: 14px;
  line-height: 24px;
  background-color: #fff;
}

.c4.mul-cell:last-child::after,
.c4.mul-cell--borderless::after {
  display: none;
}

.c4.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 16px;
  bottom: 0;
  left: 16px;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c4.mul-cell .mul-cell__label {
  margin-top: 4px;
  color: #969799;
  font-size: 12px;
  line-height: 18px;
}

.c4.mul-cell .mul-cell__title,
.c4.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c4.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c4.mul-cell .mul-cell__left-icon,
.c4.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 24px;
  font-size: 16px;
  line-height: 24px;
}

.c4.mul-cell .mul-cell__left-icon {
  margin-right: 4px;
}

.c4.mul-cell .mul-cell__right-icon {
  margin-left: 4px;
  color: #969799;
}

.c4.mul-cell--clickable {
  cursor: pointer;
}

.c4.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c4.mul-cell--required {
  overflow: visible;
}

.c4.mul-cell--required::before {
  position: absolute;
  left: 8px;
  color: #fa220a;
  font-size: 14px;
  content: '*';
}

.c4.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.mul-cell--large {
  padding-top: 12px;
  padding-bottom: 12px;
}

.c4.mul-cell--large .mul-cell__title {
  font-size: 16px;
}

.c4.mul-cell--large .mul-cell__label {
  font-size: 14px;
}

.c2.mul-overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c3.mul-overflow-hidden {
  overflow: hidden !important;
}

.c3.mul-popup {
  position: fixed;
  max-height: 100%;
  overflow-y: auto;
  background-color: #fff;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
  -webkit-overflow-scrolling: touch;
}

.c3.mul-popup--center {
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c3.mul-popup--center.mul-popup--round {
  border-radius: 20px;
}

.c3.mul-popup--top {
  top: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--top.mul-popup--round {
  border-radius: 0 0 20px 20px;
}

.c3.mul-popup--right {
  top: 50%;
  right: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--right.mul-popup--round {
  border-radius: 20px 0 0 20px;
}

.c3.mul-popup--bottom {
  bottom: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--bottom.mul-popup--round {
  border-radius: 20px 20px 0 0;
}

.c3.mul-popup--left {
  top: 50%;
  left: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--left.mul-popup--round {
  border-radius: 0 20px 20px 0;
}

.c3.mul-popup--safe-area-inset-bottom {
  padding-bottom: constant(safe-area-inset-bottom);
  padding-bottom: env(safe-area-inset-bottom);
}

.c3.mul-popup-slide-top-enter-active,
.c3.mul-popup-slide-left-enter-active,
.c3.mul-popup-slide-right-enter-active,
.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c3.mul-popup-slide-top-exit-active,
.c3.mul-popup-slide-left-exit-active,
.c3.mul-popup-slide-right-exit-active,
.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c3.mul-popup-slide-top-enter {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-top-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit-active {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-bottom-enter {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-bottom-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-right-enter {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-right-exit-active {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-enter {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-exit-active {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3 .mul-popup__close-icon {
  position: absolute !important;
  z-index: 1;
  color: #c8c9cc;
  font-size: 22px;
  cursor: pointer;
}

.c3 .mul-popup__close-icon:active {
  color: #969799;
}

.c3 .mul-popup__close-icon--top-left {
  top: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--top-right {
  top: 16px;
  right: 16px;
}

.c3 .mul-popup__close-icon--bottom-left {
  bottom: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--bottom-right {
  right: 16px;
  bottom: 16px;
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar mul-dropdown-menu__bar--opened"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--active mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: block; top: 0px;"
      >
        <div
          class="c2 mul-overlay mul-fade-enter mul-fade-enter-active"
          style="z-index: 2000; position: absolute; animation-duration: 0.2s;"
        />
        <div
          class="c3 mul-popup mul-popup--top mul-dropdown-item__content mul-popup-slide-top-enter mul-popup-slide-top-enter-active"
          style="z-index: 2001; transition-duration: 0.2s;"
        >
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option mul-dropdown-item__option--active"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                A
              </span>
            </div>
            <div
              class="mul-cell__value"
            >
              <i
                class="c5 mul-icon mul-icon-success mul-dropdown-item__icon"
                content="F0C8"
                name="success"
                style="font-size: 14px;"
              />
            </div>
          </div>
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                B
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem destroy one item 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem didn\`t find matched option 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          />
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          />
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem direction up 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--up"
        style="display: none; bottom: 0px;"
      />
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--up"
        style="display: none; bottom: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem direction up 2`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c5.mul-icon::before {
  display: inline-block;
}

.c5.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c5.mul-icon-success::before {
  content: '\\F0C8';
}

.c4.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  overflow: hidden;
  color: #323233;
  font-size: 14px;
  line-height: 24px;
  background-color: #fff;
}

.c4.mul-cell:last-child::after,
.c4.mul-cell--borderless::after {
  display: none;
}

.c4.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 16px;
  bottom: 0;
  left: 16px;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c4.mul-cell .mul-cell__label {
  margin-top: 4px;
  color: #969799;
  font-size: 12px;
  line-height: 18px;
}

.c4.mul-cell .mul-cell__title,
.c4.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c4.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c4.mul-cell .mul-cell__left-icon,
.c4.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 24px;
  font-size: 16px;
  line-height: 24px;
}

.c4.mul-cell .mul-cell__left-icon {
  margin-right: 4px;
}

.c4.mul-cell .mul-cell__right-icon {
  margin-left: 4px;
  color: #969799;
}

.c4.mul-cell--clickable {
  cursor: pointer;
}

.c4.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c4.mul-cell--required {
  overflow: visible;
}

.c4.mul-cell--required::before {
  position: absolute;
  left: 8px;
  color: #fa220a;
  font-size: 14px;
  content: '*';
}

.c4.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.mul-cell--large {
  padding-top: 12px;
  padding-bottom: 12px;
}

.c4.mul-cell--large .mul-cell__title {
  font-size: 16px;
}

.c4.mul-cell--large .mul-cell__label {
  font-size: 14px;
}

.c2.mul-overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c3.mul-overflow-hidden {
  overflow: hidden !important;
}

.c3.mul-popup {
  position: fixed;
  max-height: 100%;
  overflow-y: auto;
  background-color: #fff;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
  -webkit-overflow-scrolling: touch;
}

.c3.mul-popup--center {
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c3.mul-popup--center.mul-popup--round {
  border-radius: 20px;
}

.c3.mul-popup--top {
  top: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--top.mul-popup--round {
  border-radius: 0 0 20px 20px;
}

.c3.mul-popup--right {
  top: 50%;
  right: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--right.mul-popup--round {
  border-radius: 20px 0 0 20px;
}

.c3.mul-popup--bottom {
  bottom: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--bottom.mul-popup--round {
  border-radius: 20px 20px 0 0;
}

.c3.mul-popup--left {
  top: 50%;
  left: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--left.mul-popup--round {
  border-radius: 0 20px 20px 0;
}

.c3.mul-popup--safe-area-inset-bottom {
  padding-bottom: constant(safe-area-inset-bottom);
  padding-bottom: env(safe-area-inset-bottom);
}

.c3.mul-popup-slide-top-enter-active,
.c3.mul-popup-slide-left-enter-active,
.c3.mul-popup-slide-right-enter-active,
.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c3.mul-popup-slide-top-exit-active,
.c3.mul-popup-slide-left-exit-active,
.c3.mul-popup-slide-right-exit-active,
.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c3.mul-popup-slide-top-enter {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-top-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit-active {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-bottom-enter {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-bottom-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-right-enter {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-right-exit-active {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-enter {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-exit-active {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3 .mul-popup__close-icon {
  position: absolute !important;
  z-index: 1;
  color: #c8c9cc;
  font-size: 22px;
  cursor: pointer;
}

.c3 .mul-popup__close-icon:active {
  color: #969799;
}

.c3 .mul-popup__close-icon--top-left {
  top: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--top-right {
  top: 16px;
  right: 16px;
}

.c3 .mul-popup__close-icon--bottom-left {
  bottom: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--bottom-right {
  right: 16px;
  bottom: 16px;
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar mul-dropdown-menu__bar--opened"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--active"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--up"
        style="display: block; bottom: 768px;"
      >
        <div
          class="c2 mul-overlay mul-fade-enter mul-fade-enter-active"
          style="z-index: 2000; position: absolute; animation-duration: 0.2s;"
        />
        <div
          class="c3 mul-popup mul-popup--bottom mul-dropdown-item__content mul-popup-slide-bottom-enter mul-popup-slide-bottom-enter-active"
          style="z-index: 2001; transition-duration: 0.2s;"
        >
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option mul-dropdown-item__option--active"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                A
              </span>
            </div>
            <div
              class="mul-cell__value"
            >
              <i
                class="c5 mul-icon mul-icon-success mul-dropdown-item__icon"
                content="F0C8"
                name="success"
                style="font-size: 14px;"
              />
            </div>
          </div>
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                B
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--up"
        style="display: none; bottom: 768px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem disable close-on-click-outside 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c5.mul-icon::before {
  display: inline-block;
}

.c5.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c5.mul-icon-success::before {
  content: '\\F0C8';
}

.c4.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  overflow: hidden;
  color: #323233;
  font-size: 14px;
  line-height: 24px;
  background-color: #fff;
}

.c4.mul-cell:last-child::after,
.c4.mul-cell--borderless::after {
  display: none;
}

.c4.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 16px;
  bottom: 0;
  left: 16px;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c4.mul-cell .mul-cell__label {
  margin-top: 4px;
  color: #969799;
  font-size: 12px;
  line-height: 18px;
}

.c4.mul-cell .mul-cell__title,
.c4.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c4.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c4.mul-cell .mul-cell__left-icon,
.c4.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 24px;
  font-size: 16px;
  line-height: 24px;
}

.c4.mul-cell .mul-cell__left-icon {
  margin-right: 4px;
}

.c4.mul-cell .mul-cell__right-icon {
  margin-left: 4px;
  color: #969799;
}

.c4.mul-cell--clickable {
  cursor: pointer;
}

.c4.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c4.mul-cell--required {
  overflow: visible;
}

.c4.mul-cell--required::before {
  position: absolute;
  left: 8px;
  color: #fa220a;
  font-size: 14px;
  content: '*';
}

.c4.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.mul-cell--large {
  padding-top: 12px;
  padding-bottom: 12px;
}

.c4.mul-cell--large .mul-cell__title {
  font-size: 16px;
}

.c4.mul-cell--large .mul-cell__label {
  font-size: 14px;
}

.c2.mul-overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c3.mul-overflow-hidden {
  overflow: hidden !important;
}

.c3.mul-popup {
  position: fixed;
  max-height: 100%;
  overflow-y: auto;
  background-color: #fff;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
  -webkit-overflow-scrolling: touch;
}

.c3.mul-popup--center {
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c3.mul-popup--center.mul-popup--round {
  border-radius: 20px;
}

.c3.mul-popup--top {
  top: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--top.mul-popup--round {
  border-radius: 0 0 20px 20px;
}

.c3.mul-popup--right {
  top: 50%;
  right: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--right.mul-popup--round {
  border-radius: 20px 0 0 20px;
}

.c3.mul-popup--bottom {
  bottom: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--bottom.mul-popup--round {
  border-radius: 20px 20px 0 0;
}

.c3.mul-popup--left {
  top: 50%;
  left: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--left.mul-popup--round {
  border-radius: 0 20px 20px 0;
}

.c3.mul-popup--safe-area-inset-bottom {
  padding-bottom: constant(safe-area-inset-bottom);
  padding-bottom: env(safe-area-inset-bottom);
}

.c3.mul-popup-slide-top-enter-active,
.c3.mul-popup-slide-left-enter-active,
.c3.mul-popup-slide-right-enter-active,
.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c3.mul-popup-slide-top-exit-active,
.c3.mul-popup-slide-left-exit-active,
.c3.mul-popup-slide-right-exit-active,
.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c3.mul-popup-slide-top-enter {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-top-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit-active {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-bottom-enter {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-bottom-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-right-enter {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-right-exit-active {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-enter {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-exit-active {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3 .mul-popup__close-icon {
  position: absolute !important;
  z-index: 1;
  color: #c8c9cc;
  font-size: 22px;
  cursor: pointer;
}

.c3 .mul-popup__close-icon:active {
  color: #969799;
}

.c3 .mul-popup__close-icon--top-left {
  top: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--top-right {
  top: 16px;
  right: 16px;
}

.c3 .mul-popup__close-icon--bottom-left {
  bottom: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--bottom-right {
  right: 16px;
  bottom: 16px;
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar mul-dropdown-menu__bar--opened"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--active mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: block; top: 0px;"
      >
        <div
          class="c2 mul-overlay mul-fade-enter mul-fade-enter-active"
          style="z-index: 2000; position: absolute; animation-duration: 0.2s;"
        />
        <div
          class="c3 mul-popup mul-popup--top mul-dropdown-item__content mul-popup-slide-top-enter mul-popup-slide-top-enter-active"
          style="z-index: 2001; transition-duration: 0.2s;"
        >
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option mul-dropdown-item__option--active"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                A
              </span>
            </div>
            <div
              class="mul-cell__value"
            >
              <i
                class="c5 mul-icon mul-icon-success mul-dropdown-item__icon"
                content="F0C8"
                name="success"
                style="font-size: 14px;"
              />
            </div>
          </div>
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                B
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem disable dropdown item 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar"
    >
      <div
        class="mul-dropdown-menu__item mul-dropdown-menu__item--disabled"
        role="button"
        tabindex="-1"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem render option icon 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c5.mul-icon::before {
  display: inline-block;
}

.c5.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c5.mul-icon-success::before {
  content: '\\F0C8';
}

.c4.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  overflow: hidden;
  color: #323233;
  font-size: 14px;
  line-height: 24px;
  background-color: #fff;
}

.c4.mul-cell:last-child::after,
.c4.mul-cell--borderless::after {
  display: none;
}

.c4.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 16px;
  bottom: 0;
  left: 16px;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c4.mul-cell .mul-cell__label {
  margin-top: 4px;
  color: #969799;
  font-size: 12px;
  line-height: 18px;
}

.c4.mul-cell .mul-cell__title,
.c4.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c4.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c4.mul-cell .mul-cell__left-icon,
.c4.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 24px;
  font-size: 16px;
  line-height: 24px;
}

.c4.mul-cell .mul-cell__left-icon {
  margin-right: 4px;
}

.c4.mul-cell .mul-cell__right-icon {
  margin-left: 4px;
  color: #969799;
}

.c4.mul-cell--clickable {
  cursor: pointer;
}

.c4.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c4.mul-cell--required {
  overflow: visible;
}

.c4.mul-cell--required::before {
  position: absolute;
  left: 8px;
  color: #fa220a;
  font-size: 14px;
  content: '*';
}

.c4.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.mul-cell--large {
  padding-top: 12px;
  padding-bottom: 12px;
}

.c4.mul-cell--large .mul-cell__title {
  font-size: 16px;
}

.c4.mul-cell--large .mul-cell__label {
  font-size: 14px;
}

.c2.mul-overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c3.mul-overflow-hidden {
  overflow: hidden !important;
}

.c3.mul-popup {
  position: fixed;
  max-height: 100%;
  overflow-y: auto;
  background-color: #fff;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
  -webkit-overflow-scrolling: touch;
}

.c3.mul-popup--center {
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c3.mul-popup--center.mul-popup--round {
  border-radius: 20px;
}

.c3.mul-popup--top {
  top: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--top.mul-popup--round {
  border-radius: 0 0 20px 20px;
}

.c3.mul-popup--right {
  top: 50%;
  right: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--right.mul-popup--round {
  border-radius: 20px 0 0 20px;
}

.c3.mul-popup--bottom {
  bottom: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--bottom.mul-popup--round {
  border-radius: 20px 20px 0 0;
}

.c3.mul-popup--left {
  top: 50%;
  left: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--left.mul-popup--round {
  border-radius: 0 20px 20px 0;
}

.c3.mul-popup--safe-area-inset-bottom {
  padding-bottom: constant(safe-area-inset-bottom);
  padding-bottom: env(safe-area-inset-bottom);
}

.c3.mul-popup-slide-top-enter-active,
.c3.mul-popup-slide-left-enter-active,
.c3.mul-popup-slide-right-enter-active,
.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c3.mul-popup-slide-top-exit-active,
.c3.mul-popup-slide-left-exit-active,
.c3.mul-popup-slide-right-exit-active,
.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c3.mul-popup-slide-top-enter {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-top-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit-active {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-bottom-enter {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-bottom-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-right-enter {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-right-exit-active {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-enter {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-exit-active {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3 .mul-popup__close-icon {
  position: absolute !important;
  z-index: 1;
  color: #c8c9cc;
  font-size: 22px;
  cursor: pointer;
}

.c3 .mul-popup__close-icon:active {
  color: #969799;
}

.c3 .mul-popup__close-icon--top-left {
  top: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--top-right {
  top: 16px;
  right: 16px;
}

.c3 .mul-popup__close-icon--bottom-left {
  bottom: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--bottom-right {
  right: 16px;
  bottom: 16px;
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar mul-dropdown-menu__bar--opened"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--active mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: block; top: 0px;"
      >
        <div
          class="c2 mul-overlay mul-fade-enter mul-fade-enter-active"
          style="z-index: 2000; position: absolute; animation-duration: 0.2s;"
        />
        <div
          class="c3 mul-popup mul-popup--top mul-dropdown-item__content mul-popup-slide-top-enter mul-popup-slide-top-enter-active"
          style="z-index: 2001; transition-duration: 0.2s;"
        >
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option mul-dropdown-item__option--active"
            role="button"
            tabindex="0"
          >
            <i
              class="c5 mul-icon mul-icon-success mul-cell__left-icon"
              content="F0C8"
              name="success"
              style="font-size: 20px;"
            />
            <div
              class="mul-cell__title"
            >
              <span>
                A
              </span>
            </div>
            <div
              class="mul-cell__value"
            >
              <i
                class="c5 mul-icon mul-icon-success mul-dropdown-item__icon"
                content="F0C8"
                name="success"
                style="font-size: 14px;"
              />
            </div>
          </div>
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option"
            role="button"
            tabindex="0"
          >
            <i
              class="c5 mul-icon mul-icon-success mul-cell__left-icon"
              content="F0C8"
              name="success"
              style="font-size: 20px;"
            />
            <div
              class="mul-cell__title"
            >
              <span>
                B
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem show dropdown item 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c5.mul-icon::before {
  display: inline-block;
}

.c5.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c5.mul-icon-success::before {
  content: '\\F0C8';
}

.c4.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  overflow: hidden;
  color: #323233;
  font-size: 14px;
  line-height: 24px;
  background-color: #fff;
}

.c4.mul-cell:last-child::after,
.c4.mul-cell--borderless::after {
  display: none;
}

.c4.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 16px;
  bottom: 0;
  left: 16px;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c4.mul-cell .mul-cell__label {
  margin-top: 4px;
  color: #969799;
  font-size: 12px;
  line-height: 18px;
}

.c4.mul-cell .mul-cell__title,
.c4.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c4.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c4.mul-cell .mul-cell__left-icon,
.c4.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 24px;
  font-size: 16px;
  line-height: 24px;
}

.c4.mul-cell .mul-cell__left-icon {
  margin-right: 4px;
}

.c4.mul-cell .mul-cell__right-icon {
  margin-left: 4px;
  color: #969799;
}

.c4.mul-cell--clickable {
  cursor: pointer;
}

.c4.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c4.mul-cell--required {
  overflow: visible;
}

.c4.mul-cell--required::before {
  position: absolute;
  left: 8px;
  color: #fa220a;
  font-size: 14px;
  content: '*';
}

.c4.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.mul-cell--large {
  padding-top: 12px;
  padding-bottom: 12px;
}

.c4.mul-cell--large .mul-cell__title {
  font-size: 16px;
}

.c4.mul-cell--large .mul-cell__label {
  font-size: 14px;
}

.c2.mul-overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c3.mul-overflow-hidden {
  overflow: hidden !important;
}

.c3.mul-popup {
  position: fixed;
  max-height: 100%;
  overflow-y: auto;
  background-color: #fff;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
  -webkit-overflow-scrolling: touch;
}

.c3.mul-popup--center {
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c3.mul-popup--center.mul-popup--round {
  border-radius: 20px;
}

.c3.mul-popup--top {
  top: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--top.mul-popup--round {
  border-radius: 0 0 20px 20px;
}

.c3.mul-popup--right {
  top: 50%;
  right: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--right.mul-popup--round {
  border-radius: 20px 0 0 20px;
}

.c3.mul-popup--bottom {
  bottom: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--bottom.mul-popup--round {
  border-radius: 20px 20px 0 0;
}

.c3.mul-popup--left {
  top: 50%;
  left: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--left.mul-popup--round {
  border-radius: 0 20px 20px 0;
}

.c3.mul-popup--safe-area-inset-bottom {
  padding-bottom: constant(safe-area-inset-bottom);
  padding-bottom: env(safe-area-inset-bottom);
}

.c3.mul-popup-slide-top-enter-active,
.c3.mul-popup-slide-left-enter-active,
.c3.mul-popup-slide-right-enter-active,
.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c3.mul-popup-slide-top-exit-active,
.c3.mul-popup-slide-left-exit-active,
.c3.mul-popup-slide-right-exit-active,
.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c3.mul-popup-slide-top-enter {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-top-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit-active {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-bottom-enter {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-bottom-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-right-enter {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-right-exit-active {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-enter {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-exit-active {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3 .mul-popup__close-icon {
  position: absolute !important;
  z-index: 1;
  color: #c8c9cc;
  font-size: 22px;
  cursor: pointer;
}

.c3 .mul-popup__close-icon:active {
  color: #969799;
}

.c3 .mul-popup__close-icon--top-left {
  top: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--top-right {
  top: 16px;
  right: 16px;
}

.c3 .mul-popup__close-icon--bottom-left {
  bottom: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--bottom-right {
  right: 16px;
  bottom: 16px;
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar mul-dropdown-menu__bar--opened"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--active mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: block; top: 0px;"
      >
        <div
          class="c2 mul-overlay mul-fade-enter mul-fade-enter-active"
          style="z-index: 2000; position: absolute; animation-duration: 0.2s;"
        />
        <div
          class="c3 mul-popup mul-popup--top mul-dropdown-item__content mul-popup-slide-top-enter mul-popup-slide-top-enter-active"
          style="z-index: 2001; transition-duration: 0.2s;"
        >
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option mul-dropdown-item__option--active"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                A
              </span>
            </div>
            <div
              class="mul-cell__value"
            >
              <i
                class="c5 mul-icon mul-icon-success mul-dropdown-item__icon"
                content="F0C8"
                name="success"
                style="font-size: 14px;"
              />
            </div>
          </div>
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                B
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem show dropdown item 2`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c5.mul-icon {
  position: relative;
  display: inline-block;
  font-family: 'muld-icon' !important;
  font-size: inherit;
  text-rendering: auto;
  -webkit-font-smoothing: antialiased;
}

.c5.mul-icon::before {
  display: inline-block;
}

.c5.mul-icon .mul-icon__image {
  width: 1em;
  height: 1em;
  object-fit: contain;
}

.c5.mul-icon-success::before {
  content: '\\F0C8';
}

.c4.mul-cell {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  width: 100%;
  padding: 10px 16px;
  overflow: hidden;
  color: #323233;
  font-size: 14px;
  line-height: 24px;
  background-color: #fff;
}

.c4.mul-cell:last-child::after,
.c4.mul-cell--borderless::after {
  display: none;
}

.c4.mul-cell::after {
  position: absolute;
  box-sizing: border-box;
  content: ' ';
  pointer-events: none;
  right: 16px;
  bottom: 0;
  left: 16px;
  border-bottom: 1px solid #ebedf0;
  -webkit-transform: scaleY(0.5);
  -ms-transform: scaleY(0.5);
  transform: scaleY(0.5);
}

.c4.mul-cell .mul-cell__label {
  margin-top: 4px;
  color: #969799;
  font-size: 12px;
  line-height: 18px;
}

.c4.mul-cell .mul-cell__title,
.c4.mul-cell .mul-cell__value {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c4.mul-cell .mul-cell__value {
  position: relative;
  overflow: hidden;
  color: #969799;
  text-align: right;
  vertical-align: middle;
  word-wrap: break-word;
}

.c4.mul-cell .mul-cell__value--alone {
  color: #323233;
  text-align: left;
}

.c4.mul-cell .mul-cell__left-icon,
.c4.mul-cell .mul-cell__right-icon {
  min-width: 1em;
  height: 24px;
  font-size: 16px;
  line-height: 24px;
}

.c4.mul-cell .mul-cell__left-icon {
  margin-right: 4px;
}

.c4.mul-cell .mul-cell__right-icon {
  margin-left: 4px;
  color: #969799;
}

.c4.mul-cell--clickable {
  cursor: pointer;
}

.c4.mul-cell--clickable:active {
  background-color: #f2f3f5;
}

.c4.mul-cell--required {
  overflow: visible;
}

.c4.mul-cell--required::before {
  position: absolute;
  left: 8px;
  color: #fa220a;
  font-size: 14px;
  content: '*';
}

.c4.mul-cell--center {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4.mul-cell--large {
  padding-top: 12px;
  padding-bottom: 12px;
}

.c4.mul-cell--large .mul-cell__title {
  font-size: 16px;
}

.c4.mul-cell--large .mul-cell__label {
  font-size: 14px;
}

.c2.mul-overlay {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.7);
}

.c3.mul-overflow-hidden {
  overflow: hidden !important;
}

.c3.mul-popup {
  position: fixed;
  max-height: 100%;
  overflow-y: auto;
  background-color: #fff;
  -webkit-transition: -webkit-transform 0.3s;
  -webkit-transition: transform 0.3s;
  transition: transform 0.3s;
  -webkit-overflow-scrolling: touch;
}

.c3.mul-popup--center {
  top: 50%;
  left: 50%;
  -webkit-transform: translate3d(-50%,-50%,0);
  -ms-transform: translate3d(-50%,-50%,0);
  transform: translate3d(-50%,-50%,0);
}

.c3.mul-popup--center.mul-popup--round {
  border-radius: 20px;
}

.c3.mul-popup--top {
  top: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--top.mul-popup--round {
  border-radius: 0 0 20px 20px;
}

.c3.mul-popup--right {
  top: 50%;
  right: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--right.mul-popup--round {
  border-radius: 20px 0 0 20px;
}

.c3.mul-popup--bottom {
  bottom: 0;
  left: 0;
  width: 100%;
}

.c3.mul-popup--bottom.mul-popup--round {
  border-radius: 20px 20px 0 0;
}

.c3.mul-popup--left {
  top: 50%;
  left: 0;
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup--left.mul-popup--round {
  border-radius: 0 20px 20px 0;
}

.c3.mul-popup--safe-area-inset-bottom {
  padding-bottom: constant(safe-area-inset-bottom);
  padding-bottom: env(safe-area-inset-bottom);
}

.c3.mul-popup-slide-top-enter-active,
.c3.mul-popup-slide-left-enter-active,
.c3.mul-popup-slide-right-enter-active,
.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
}

.c3.mul-popup-slide-top-exit-active,
.c3.mul-popup-slide-left-exit-active,
.c3.mul-popup-slide-right-exit-active,
.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transition-timing-function: ease-in;
  transition-timing-function: ease-in;
}

.c3.mul-popup-slide-top-enter {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-top-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-top-exit-active {
  -webkit-transform: translate3d(0,-100%,0);
  -ms-transform: translate3d(0,-100%,0);
  transform: translate3d(0,-100%,0);
}

.c3.mul-popup-slide-bottom-enter {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-bottom-exit {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-enter-active {
  -webkit-transform: translate3d(0,0,0);
  -ms-transform: translate3d(0,0,0);
  transform: translate3d(0,0,0);
}

.c3.mul-popup-slide-bottom-exit-active {
  -webkit-transform: translate3d(0,100%,0);
  -ms-transform: translate3d(0,100%,0);
  transform: translate3d(0,100%,0);
}

.c3.mul-popup-slide-right-enter {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-right-exit-active {
  -webkit-transform: translate3d(100%,-50%,0);
  -ms-transform: translate3d(100%,-50%,0);
  transform: translate3d(100%,-50%,0);
}

.c3.mul-popup-slide-right-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-enter {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-exit {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3.mul-popup-slide-left-exit-active {
  -webkit-transform: translate3d(-100%,-50%,0);
  -ms-transform: translate3d(-100%,-50%,0);
  transform: translate3d(-100%,-50%,0);
}

.c3.mul-popup-slide-left-enter-active {
  -webkit-transform: translate3d(0,-50%,0);
  -ms-transform: translate3d(0,-50%,0);
  transform: translate3d(0,-50%,0);
}

.c3 .mul-popup__close-icon {
  position: absolute !important;
  z-index: 1;
  color: #c8c9cc;
  font-size: 22px;
  cursor: pointer;
}

.c3 .mul-popup__close-icon:active {
  color: #969799;
}

.c3 .mul-popup__close-icon--top-left {
  top: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--top-right {
  top: 16px;
  right: 16px;
}

.c3 .mul-popup__close-icon--bottom-left {
  bottom: 16px;
  left: 16px;
}

.c3 .mul-popup__close-icon--bottom-right {
  right: 16px;
  bottom: 16px;
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar mul-dropdown-menu__bar--opened"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title mul-dropdown-menu__title--active mul-dropdown-menu__title--down"
        >
          <div
            class="mul-ellipsis"
          >
            A
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: block; top: 0px;"
      >
        <div
          class="c2 mul-overlay mul-fade-enter mul-fade-enter-active"
          style="z-index: 2000; position: absolute; animation-duration: 0.2s;"
        />
        <div
          class="c3 mul-popup mul-popup--top mul-dropdown-item__content mul-popup-slide-top-enter mul-popup-slide-top-enter-active"
          style="z-index: 2001; transition-duration: 0.2s;"
        >
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option mul-dropdown-item__option--active"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                A
              </span>
            </div>
            <div
              class="mul-cell__value"
            >
              <i
                class="c5 mul-icon mul-icon-success mul-dropdown-item__icon"
                content="F0C8"
                name="success"
                style="font-size: 14px;"
              />
            </div>
          </div>
          <div
            class="c4 mul-cell mul-cell--clickable mul-dropdown-item__option"
            role="button"
            tabindex="0"
          >
            <div
              class="mul-cell__title"
            >
              <span>
                B
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DropdownMenu & DropdownItem title prop 1`] = `
<DocumentFragment>
  .c0 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0 .mul-dropdown-menu__bar {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  background-color: #fff;
  box-shadow: 0 2px 12px fade(#646566,8);
}

.c0 .mul-dropdown-menu__bar--opened {
  z-index: 10 + 1;
}

.c0 .mul-dropdown-menu__item {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-width: 0;
  cursor: pointer;
}

.c0 .mul-dropdown-menu__item:active {
  opacity: 0.7;
}

.c0 .mul-dropdown-menu__item--disabled:active {
  opacity: 1;
}

.c0 .mul-dropdown-menu__item--disabled .mul-dropdown-menu__title {
  color: #969799;
}

.c0 .mul-dropdown-menu__title {
  position: relative;
  box-sizing: border-box;
  max-width: 100%;
  padding: 0 8px;
  color: #323233;
  font-size: 15px;
  line-height: 22px;
}

.c0 .mul-dropdown-menu__title::after {
  position: absolute;
  top: 50%;
  right: -4px;
  margin-top: -5px;
  border: 3px solid;
  border-color: transparent transparent #dcdee0 #dcdee0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  opacity: 0.8;
  content: '';
}

.c0 .mul-dropdown-menu__title--active {
  color: #fa220a;
}

.c0 .mul-dropdown-menu__title--active::after {
  border-color: transparent transparent currentColor currentColor;
}

.c0 .mul-dropdown-menu__title--down::after {
  margin-top: -1px;
  -webkit-transform: rotate(135deg);
  -ms-transform: rotate(135deg);
  transform: rotate(135deg);
}

.c1 .mul-dropdown-item {
  position: fixed;
  right: 0;
  left: 0;
  z-index: 10;
  overflow: hidden;
}

.c1 .mul-dropdown-item__icon {
  display: block;
  line-height: inherit;
}

.c1 .mul-dropdown-item__option {
  text-align: left;
}

.c1 .mul-dropdown-item__option--active {
  color: #fa220a;
}

.c1 .mul-dropdown-item__option--active .mul-dropdown-item__icon {
  color: #fa220a;
}

.c1 .mul-dropdown-item--up {
  top: 0;
}

.c1 .mul-dropdown-item--down {
  bottom: 0;
}

.c1 .mul-dropdown-item__content {
  position: absolute;
  max-height: 80%;
}

<div
    class="c0 mul-dropdown-menu"
  >
    <div
      class="mul-dropdown-menu__bar"
    >
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            Title
          </div>
        </span>
      </div>
      <div
        class="mul-dropdown-menu__item"
        role="button"
        tabindex="0"
      >
        <span
          class="mul-dropdown-menu__title"
        >
          <div
            class="mul-ellipsis"
          >
            Title
          </div>
        </span>
      </div>
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
    <div
      class="c1 mul-dropdown-item"
    >
      <div
        class="mul-dropdown-item mul-dropdown-item--down"
        style="display: none; top: 0px;"
      />
    </div>
  </div>
</DocumentFragment>
`;
